# coding-challenges

./: .Dockerfile  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  DOCUMENTATION.md  Dockerfile  HOW_TO_RUN.md  Makefile  README.md  TODO.md  app.py  build.sh  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
Test/: test_1.py  test_gistapi.py
constants/: constants.py
gistapi/: __init__.py  env.py  exceptions.py  gistapi.py  gistapi2.py  models.py  services.py  utils.py
gistapi/api/: gists.py
gistapi/functions/: __init__.py  utils.py
gistapi/helpers/: gists.py  matcher.py
gistapi/resources/: search.py
gistapi/serializers/: gist_search_serailizer.py
gistapi/services/: git_hub_client.py  schemas.py
gistapi/utils/: gist_utils.py
src/gistapi/: __init__.py  api.py  config.py  error.py  rate_limit.py  request_schema.py
test/: conftest.py  test_search.py
tests/: __init__.py  conftest.py  test_api.py  test_gistapi.py
