[tool.poetry]
name = "gistapi"
version = "0.1.0"
description = ""
authors = ["SerSamgy <samgy7cool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {version = "^3.8.6", extras = ["speedups"]}
Flask = { version = "^2.3.3", extras = ["async"] }
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
Faker = "^19.13.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
responses = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 110
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
