[tool.poetry]
name = "backend-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Chiemeka Alim <lord.chiemy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
