[tool.poetry]
name = "backend-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Chiemeka Alim <lord.chiemy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
requests = "2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
